--- a/package.json
+++ b/package.json
@@ -17,5 +17,22 @@
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
-  }
+  },
+  "name": "azorahai",
+  "description": "<p align=\"center\"><img src=\"https://laravel.com/assets/img/components/logo-laravel.svg\"></p>",
+  "version": "1.0.0",
+  "main": "app.js",
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tigmar98/AzorAhai.git"
+  },
+  "author": "Tigran Martirosyan, Eduard Baghdasaryan",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tigmar98/AzorAhai/issues"
+  },
+  "homepage": "https://github.com/tigmar98/AzorAhai#readme"
 }
